fix: increase contrast of switch color even when disabled

--- a/resources/css/container.css
+++ b/resources/css/container.css
@@ -412,7 +412,7 @@ input[type="range"].startSlider {
   width: 11px;
   left: 1px;
   bottom: 1px;
-  background-color: var(--tertiary-color);
+  background-color: var(--secondary-color);
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
